# streamer

./: README.md  notes.md
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: index.html  index.tsx
client/src/app/: App.tsx
client/src/app/services/: api.ts  channel.ts  mode.ts  socket.ts
server/: Cargo.toml
server/src/: cli.rs  client.rs  id.rs  main.rs  messages.rs  state.rs
