[package]
name = "file_streamer"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

[dependencies]
warp = "0.1"
include_dir = "0.2.1"
mime_guess = "2.0.0-alpha.6"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
futures = "0.1"
rand = "0.5.5"
base64 = "0.9.3"
derive_more = "0.12"
hyper = "0.12"
bytes = "0.4"